manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: guessing-game-service
  labels:
    kubernetes.io/service-name: guessing-game-service
spec:
  selector:
    app.kubernetes.io/name: guessing-game
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
